# nebula

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE.md  README.md  pnpm-lock.yaml
benchmarking/: Cargo.toml  start_mqtt_broker.sh  start_zwave.sh
benchmarking/experiment_results/: Data Analysis.xlsx  Energy data analysis.xlsx  analyzed_nrec_data_0_4_0.json  analyzed_rpi_data_0_4_0.json  energy_data_rpi_29apr_exp_fact.json  nrec_exp_result.json  nrec_fact_result.json  rpi_measurements_raw.xlsx  ~$Data Analysis.xlsx
benchmarking/src/: baseline.rs  benchmarking.rs  lib.rs  main.rs
benchmarking/src/utils/: baseline.rs  calc.rs  draw.rs  efficiency_statistics.rs  energy_statistics.rs  file.rs  mod.rs  modbus.rs  mqtt.rs  power_estimate.rs  request.rs
examples/memeify/: Cargo.toml  build.rs
examples/memeify/src/: main.rs
nebula/nebula_server/: Cargo.toml  Makefile.toml  entrypoint.sh  package-lock.json  package.json  tailwind.config.cjs
nebula/nebula_server/src/: lib.rs  main.rs  models.rs
nebula/nebula_server/src/api/: call_function.rs  mod.rs
nebula/nebula_server/src/components/: function_results.rs
nebula/nebula_server/src/pages/: about.rs  docker_page.rs  metrics.rs  mod.rs  wasm_page.rs
nebula/nebula_server/src/utilities/: format.rs  get_file_path.rs  mod.rs  persist.rs  redirect_http_to_https.rs  sanitize_input.rs  serialize_modules.rs
nebula/nebula_server/templates/components/: footer.html  function_instructions.html  function_results.rs.html  header.html  hero.html
nebula/nebula_server/templates/layouts/: base.rs.html
nebula/nebula_server/templates/pages/: about.rs.html  docker.rs.html  (+2 more)
web_server/: .prettierignore  Cargo.toml  Makefile.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs
web_server/assets/: htmx.min.js  main.css
web_server/src/: main.rs  main2.rsss
web_server/src/components/: function_results.rs  mod.rs
web_server/src/pages/: docker_page.rs  index.rs  metrics.rs  mod.rs  wasm_page.rs
web_server/src/utilities/: get_file_path.rs  html_template.rs  mod.rs  run_docker.rs  run_wasm_module.rs
web_server/templates/: base.html  hello.html  home.html
web_server/templates/components/: function_results.html  function_results.rs.html  hero.html  wasm-modules.html
web_server/templates/layouts/: base.rs.html
web_server/templates/pages/: docker.rs.html  home.rs.html  metrics.rs.html  wasm.rs.html
(+95 files in other folders)
