[package]
name = "benchmarking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dirs = "5.0.1"
paho-mqtt = "0.12.3"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
rumqttc = "0.24.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-modbus = "0.11.0"
