[package]
name = "nebula_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
nebula_lib = { path = "../nebula_lib/" }
# log = "0.4.20"
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
# env_logger = "0.10.0"
directories = "5.0.1"
serde = "1.0.188"
askama = "0.12.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
anyhow = "1.0.75"
tower-livereload = "0.8.1"
