[package]
name = "nebula_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
nebula_lib = { path = "../nebula_lib/" }
# log = "0.4.20"
clap = { version = "4.4.18", features = ["derive", "wrap_help"] }
# env_logger = "0.10.0"
itertools = "0.12.1"
directories = "5.0.1"
serde = "1.0.196"
askama = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
anyhow = "1.0.79"
tower-livereload = "0.9.1"
serde_json = "1.0.113"
dirs = "5.0.1"
home = "0.5.9"
